--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "django>=6.0.2",
+    "djangorestframework>=3.16.1",
+    "djangorestframework-stubs>=3.16.8",
+    "pillow>=12.1.1",
     "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.2.1",
 ]
