--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "django>=6.0.2",
     "djangorestframework>=3.16.1",
     "djangorestframework-stubs>=3.16.8",
+    "drf-spectacular>=0.29.0",
     "pillow>=12.1.1",
     "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.2.1",
