--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,7 @@ dependencies = [
     "drf-spectacular>=0.29.0",
     "pillow>=12.1.1",
     "psycopg2-binary>=2.9.11",
+    "pytest>=9.0.2",
+    "pytest-django>=4.12.0",
     "python-dotenv>=1.2.1",
 ]
