--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,7 @@
 DB_NAME=your_db_name
 DB_USER=postgres
 DB_PASSWORD=postgres
-# закомментировать для запуска приложения через Docker
-#DB_HOST=localhost
-# раскомментировать для запуска приложения через Docker
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=5432
 
 # Настройки приложения
