Добавлен хост БД в .env файл для запуска через docker-compose

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ DB_NAME=your_db_name
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=localhost
+# Для запуска через docker-compose
+#DB_HOST=db
 DB_PORT=5432
 
 # Настройки приложения
